# GeoImagePro

./: .gitignore  .replit  README.md  README_FEATURES.md  RUN_ME.md  SETUP_GUIDE.md  app.py  design_guidelines.md  package-lock.json  package.json  pyproject.toml  render.yaml  replit.md  start_geotag.sh  vercel.json
api/: index.js
api/ai/: analyze.ts
api/images/: process.ts
client/: index.html
client/src/: index.css
client/src/components/: AIAssistant.tsx  AdvancedExifEditor.tsx  BatchControls.tsx  CoordinateInput.tsx  FAQ.tsx  Header.tsx  HowItWorks.tsx  ImageEditor.tsx  ImageGrid.tsx  ImageThumbnail.tsx  LocationSearch.tsx  LocationTemplateManager.tsx  MapInterface.tsx  MapLayerSelector.tsx  MetadataPanel.tsx  SearchHistory.tsx  ThemeProvider.tsx  ThemeToggle.tsx  UploadZone.tsx
client/src/components/examples/: CoordinateInput.tsx  ImageThumbnail.tsx  LocationSearch.tsx  MapInterface.tsx  MetadataPanel.tsx  SearchHistory.tsx  UploadZone.tsx
client/src/pages/: Home.tsx
server/: piexifjs.d.ts  routes.ts  storage.ts
shared/: schema.ts
static/css/: style.css
static/js/: ai-features.js  app.js  features.js  gpx-import.js  i18n.js
templates/: index.html
